--- a/template.html
+++ b/template.html
@@ -26,8 +26,8 @@
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="css/template.css" />
     
-    <script type="text/javascript" src="js/jquery.counterup.min.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" href="js/jquery.counterup.min.js"></script>
+    <script type="text/javascript" href="js/main.js"></script>
     
 </head>
 <body id="mypage" data-spy="scroll" data-target=".navbar" data-offset="60">
