--- a/template.html
+++ b/template.html
@@ -18,9 +18,10 @@
     <!-- Bootstrap links -->
 	
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+ <!-- 
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  
+  -->
   <!-- CSS & ICON links -->
   
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
@@ -28,6 +29,8 @@
     
     <script type="text/javascript" href="js/jquery.counterup.min.js"></script>
     <script type="text/javascript" href="js/main.js"></script>
+    <script type="text/javascript" href="js/jquery.min.js"></script>
+    <script type="text/javascript" href="js/bootstrap.min.js"></script>
     
 </head>
 <body id="mypage" data-spy="scroll" data-target=".navbar" data-offset="60">
