--- a/template.html
+++ b/template.html
@@ -18,6 +18,8 @@
     <!-- Bootstrap links -->
 	
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+   <script type="text/javascript" src="js/jquery.min.js"></script>
+   <script type="text/javascript" src="js/bootstrap.min.js"></script>	
  <!-- 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -27,10 +29,9 @@
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="css/template.css" />
     
-    <script type="text/javascript" href="js/jquery.counterup.min.js"></script>
-    <script type="text/javascript" href="js/main.js"></script>
-    <script type="text/javascript" href="js/jquery.min.js"></script>
-    <script type="text/javascript" href="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/jquery.counterup.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
+
     
 </head>
 <body id="mypage" data-spy="scroll" data-target=".navbar" data-offset="60">
