--- a/template.html
+++ b/template.html
@@ -18,12 +18,10 @@
     <!-- Bootstrap links -->
 	
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-   <script type="text/javascript" src="js/jquery.min.js"></script>
-   <script type="text/javascript" src="js/bootstrap.min.js"></script>	
- <!-- 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  -->
+
   <!-- CSS & ICON links -->
   
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
