--- a/template.html
+++ b/template.html
@@ -18,7 +18,7 @@
     <!-- Bootstrap links -->
 	
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   
   <!-- CSS & ICON links -->
@@ -162,10 +162,10 @@
               <div class="overlay-items">
               <p class="rrr">Similique sunt culpa qui officia deserunt mollitia animi dolorum fuga.</p>
               <ul class="team-social">
-                <li><a href="http://facebook.com/" target="_blank"><i class="fab fa-2x fa-2 fa-facebook-f"></i></a></li>
-                <li><a href="http://twitter.com/" target="_blank"><i class="fab fa-2x fa-twitter"></i></a></li>
-                <li><a href="http://instagram.com" target="_blank"><i class="fab fa-2x fa-instagram"></i></a></li>
-                <li><a href="http://linkedin.com" target="_blank"><i class="fab fa-2x fa-linkedin-in"></i></a></li>
+                <li><a href="https://facebook.com/" target="_blank"><i class="fab fa-2x fa-2 fa-facebook-f"></i></a></li>
+                <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-2x fa-twitter"></i></a></li>
+                <li><a href="https://instagram.com" target="_blank"><i class="fab fa-2x fa-instagram"></i></a></li>
+                <li><a href="https://linkedin.com" target="_blank"><i class="fab fa-2x fa-linkedin-in"></i></a></li>
               </ul> 
               </div> <!--Overlay-items end -->
             </div> <!-- Overlay end -->
@@ -185,10 +185,10 @@
               <div class="overlay-items">
               <p class="rrr">Similique sunt culpa qui officia deserunt mollitia animi dolorum fuga.</p>
               <ul class="team-social">
-               <li><a href="http://facebook.com/" target="_blank"><i class="fab fa-2x fa-2 fa-facebook-f"></i></a></li>
-                <li><a href="http://twitter.com/" target="_blank"><i class="fab fa-2x fa-twitter"></i></a></li>
-                <li><a href="http://instagram.com" target="_blank"><i class="fab fa-2x fa-instagram"></i></a></li>
-                <li><a href="http://linkedin.com" target="_blank"><i class="fab fa-2x fa-linkedin-in"></i></a></li>
+               <li><a href="https://facebook.com/" target="_blank"><i class="fab fa-2x fa-2 fa-facebook-f"></i></a></li>
+                <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-2x fa-twitter"></i></a></li>
+                <li><a href="https://instagram.com" target="_blank"><i class="fab fa-2x fa-instagram"></i></a></li>
+                <li><a href="https://linkedin.com" target="_blank"><i class="fab fa-2x fa-linkedin-in"></i></a></li>
               </ul> 
               </div> <!--Overlay-items end -->
             </div> <!-- Overlay end -->
@@ -208,10 +208,10 @@
               <div class="overlay-items">
               <p class="rrr">Similique sunt culpa qui officia deserunt mollitia animi dolorum fuga.</p>
               <ul class="team-social">
-                <li><a href="http://facebook.com/" target="_blank"><i class="fab fa-2x fa-2 fa-facebook-f"></i></a></li>
-                <li><a href="http://twitter.com/" target="_blank"><i class="fab fa-2x fa-twitter"></i></a></li>
-                <li><a href="http://instagram.com" target="_blank"><i class="fab fa-2x fa-instagram"></i></a></li>
-                <li><a href="http://linkedin.com" target="_blank"><i class="fab fa-2x fa-linkedin-in"></i></a></li>
+                <li><a href="https://facebook.com/" target="_blank"><i class="fab fa-2x fa-2 fa-facebook-f"></i></a></li>
+                <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-2x fa-twitter"></i></a></li>
+                <li><a href="https://instagram.com" target="_blank"><i class="fab fa-2x fa-instagram"></i></a></li>
+                <li><a href="https://linkedin.com" target="_blank"><i class="fab fa-2x fa-linkedin-in"></i></a></li>
               </ul> 
               </div> <!--Overlay-items end -->
             </div> <!-- Overlay end -->
@@ -275,10 +275,10 @@
       </div>
       <div class="social-fild">
         <ul>
-          <li><a id="face" href="http://facebook.com" target="_blank"><i  class="fab fa-2x fa-facebook-f"></i></a></li>
-          <li><a id="twit" href="http://twitter.com" target="_blank"><i  class="fab fa-2x fa-twitter"></i></a></li>
-          <li><a id="insta" href="http://instagram.com" target="_blank"><i  class="fab fa-2x fa-instagram"></i></a></li>
-          <li><a id="goog" href="http://plus.google.com" target="_blank"><i  class="fab fa-2x fa-google-plus-g"></i></a></li>
+          <li><a id="face" href="https://facebook.com" target="_blank"><i  class="fab fa-2x fa-facebook-f"></i></a></li>
+          <li><a id="twit" href="https://twitter.com" target="_blank"><i  class="fab fa-2x fa-twitter"></i></a></li>
+          <li><a id="insta" href="https://instagram.com" target="_blank"><i  class="fab fa-2x fa-instagram"></i></a></li>
+          <li><a id="goog" href="https://plus.google.com" target="_blank"><i  class="fab fa-2x fa-google-plus-g"></i></a></li>
         </ul>
       </div> <!-- social-fild END --> 
    </div> <!-- col-sm-6 end --> 
